5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1596_825.log
== TEST (2019-03-26 19:31:44) 
-- CODE:
from math import *
raio = raio**2 * 
-- ERROR:
File "XXXX", line 2
    raio = raio**2 * 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:31:55) 
-- CODE:
from math import *
raio = raio**2 * pi
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    raio = raio**2 * pi
NameError: name 'raio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:32:20) 
-- CODE:
from math import *
#raio = raio**2 * pi
print(math.pi)
-- EXECUTION TIME:
0.159311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 3, in <module>
    print(math.pi)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:33:29) 
-- CODE:
from math import *
#raio= raio**2 * pi
print(float(pi()
-- EXECUTION TIME:
0.234114
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:06:49) 
-- CODE:
from math import *
#raio= raio**2 * pi
print(float(pi()
-- ERROR:
File "XXXX", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:48:33) 
-- CODE:
from math import *
#raio= raio**2 * pi
entrada=("valor de um raio r")
print(float(pi()
print(area)
print(volume)
-- ERROR:
File "XXXX", line 5
    print(area)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:28:37) 
-- CODE:
from math import *
#raio= raio**2 * pi
raio= float(input("digite um valor para o raio: "))
from math import*
area= pi*raio**2
volume= 4/3*pi**3
entrada=("valor de um raio r")
print(round(area, 3))
print(round(volume, 3))
-- OUTPUT:
63.617
41.342
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:28:44) 
-- CODE:
from math import *
#raio= raio**2 * pi
raio= float(input("digite um valor para o raio: "))
from math import*
area= pi*raio**2
volume= 4/3*pi**3
entrada=("valor de um raio r")
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.204641
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
41.342
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
41.342
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:29:12) 
-- CODE:

#raio= raio**2 * pi
raio= float(input("digite um valor para o raio: "))
from math import*
area= pi*raio**2
volume= 4/3*pi**3
entrada=("valor de um raio r")
print(round(area, 3))
print(round(volume, 3))
-- OUTPUT:
63.617
41.342
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:29:22) 
-- CODE:

#raio= raio**2 * pi
raio= float(input("digite um valor para o raio: "))
from math import*
area= pi*raio**2
volume= 4/3*pi**3
entrada=("valor de um raio r")
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.137627
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
41.342
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
41.342
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:29:38) 
-- CODE:

#raio= raio**2 * pi
raio= float(input("digite um valor para o raio: "))
from math import*
area= pi*raio**2
volume= 4/3*pi**3
entrada=("valor de um raio r")
print(round(area, 3))
print(round(volume, 3))
-- OUTPUT:
63.617
41.342
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:29:49) 
-- CODE:

#raio= raio**2 * pi
raio= float(input("digite um valor para o raio: "))
from math import*
area= pi*raio**2
volume= 4/3*pi**3
entrada=("valor de um raio r")
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.145278
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
41.342
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
41.342
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:30:19) 
-- CODE:

#raio= raio**2 * pi
raio= float(input("digite um valor para o raio: "))
from math import*
area= pi*raio**2
volume= 4/3*pi*raio**3
entrada=("valor de um raio r")
print(round(area, 3))
print(round(volume, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:30:27) 
-- CODE:

#raio= raio**2 * pi
raio= float(input("digite um valor para o raio: "))
from math import*
area= pi*raio**2
volume= 4/3*pi*raio**3
entrada=("valor de um raio r")
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.188707
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
